cros: Use OS-level crash reporter for mash service process crashes

Disable breakpad in-process stack dumping for mash service processes
by removing the --enable-crash-reporter switch when they launch. The
OS-level crash_reporter has a matching change that triggers crash
dumping for those processes. Also, exit the parent browser / service
manager process to avoid triggering a crash report for that process.

Bug: 771801
Test: added ChromeContentBrowserClientMashTest.CrashReporter
Change-Id: Id7847f72ed4b6973ab924bafb4c67d7a333cf302
Reviewed-on: https://chromium-review.googlesource.com/729064
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: James Cook <jamescook@chromium.org>
Cr-Commit-Position: refs/heads/master@{#510488}
Former-commit-id: e91ab17a3dd03cb21ec0b120b64764aa15c535f4